[package]
name = "git-credential-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
clap = { version = "3", features = ["std","color", "suggestions", "derive", "cargo", "wrap_help", "env"], default_features = false }
nom = { version = "7.1", features = ["std"], default_features = false }
